name:                taxi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nhalford/taxi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          noah.halford@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Taxi, Learn
  build-depends:       base >= 4.7 && < 5
                     , array
                     , random
                     , reactive-banana
                     , ansi-terminal
                     , hnn
                     , hmatrix
                     , vector
                     , list-extras
                     , digits
                     , random-extras
                     , random-fu
                     , random-source
  default-language:    Haskell2010

executable taxi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , taxi
  default-language:    Haskell2010

test-suite taxi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , taxi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nhalford/taxi
